--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
